@@ -25,6 +25,7 @@ osd_lyrics_SOURCES = \
 	ol_osd_window.c \
 	ol_osd_render.c \
 	ol_osd_module.c \
+	ol_image_button.c \
 	ol_player.c \
 	ol_player_banshee.c \
 	ol_player_exaile02.c \
