@@ -4,6 +4,7 @@
 #define OL_STOCK_TRAYICON  "osd-lyrics-trayicon"
 #define OL_STOCK_LOADING  "osd-lyrics-loading"
 #define OL_STOCK_OSD_BG "osd-lyrics-osd-bg"
+#define OL_STOCK_OSD_PLAY "osd-lyrics-osd-play"
 void ol_stock_init ();
 
 #endif /* _OL_STOCK_H_ */
