@@ -1,6 +1,7 @@
 #include <gtk/gtk.h>
 
 #include "ol_osd_window.h"
+#include "ol_image_button.h"
 
 gint
 timeout_callback (gpointer data)
@@ -27,11 +28,11 @@ gboolean button_motion (GtkWidget      *widget,
   printf ("button motion\n");
 }
 
-int
-main (int argc, char **argv)
+GtkWidget *
+init_osd ()
 {
-  gtk_init (&argc, &argv);
-  GtkWidget *ol_osd = ol_osd_window_new ();
+  GtkWidget *widget = ol_osd_window_new ();
+  OlOsdWindow *ol_osd = OL_OSD_WINDOW (widget);
 /*   GtkWidget *window = gtk_window_new (GTK_WINDOW_TOPLEVEL); */
 /*   GtkWidget *hbox = gtk_hbox_new (TRUE, 10); */
 /*   gtk_box_pack_start (GTK_BOX (hbox), ol_osd, FALSE, FALSE,0); */
@@ -39,7 +40,7 @@ main (int argc, char **argv)
 /*   GdkPixmap *pixmap = gdk_pixmap_new (NULL, 1280, 800, 1); */
 /*   gtk_widget_input_shape_combine_mask (ol_osd, pixmap, 0, 0); */
   ol_osd_window_resize (OL_OSD_WINDOW (ol_osd), 800, 140);
-  gtk_widget_show (ol_osd);
+  gtk_widget_show (widget);
   ol_osd_window_set_line_count (ol_osd, 2);
   ol_osd_window_set_translucent_on_mouse_over (ol_osd, TRUE);
   ol_osd_window_set_lyric (OL_OSD_WINDOW (ol_osd), 0, "还没好好地感受");
@@ -51,22 +52,31 @@ main (int argc, char **argv)
   ol_osd_window_set_current_percentage (OL_OSD_WINDOW (ol_osd), 0.3);
   ol_osd_window_set_current_percentage (OL_OSD_WINDOW (ol_osd), 0.8);
   ol_osd_window_set_locked (OL_OSD_WINDOW (ol_osd), FALSE);
-/*   gtk_widget_show_all (window); */
-  GtkWidget *window = gtk_window_new (GTK_WINDOW_POPUP);
-  gtk_widget_show (window);
+  GdkPixbuf *bg = gdk_pixbuf_new_from_file ("/usr/local/share/icons/hicolor/scalable/apps/osd-lyrics-osd-bg.svg", NULL);
+  ol_osd_window_set_bg (ol_osd, bg);
   g_timeout_add (100, timeout_callback, ol_osd);
+  return widget;
+}
 
-  GtkWidget *button = gtk_button_new_with_label ("Tool button");
-  printf ("before add child\n");
-  gtk_container_add (GTK_CONTAINER (ol_osd), GTK_WIDGET (button));
-  printf ("child added\n");
-  g_signal_connect (button, "motion-notify-event",
-                    G_CALLBACK (button_motion),
-                    NULL);
-  gtk_widget_show (button);
-  printf ("child shown\n");
+GtkWidget *
+init_toolbar ()
+{
+  GtkBox *toolbar = GTK_BOX (gtk_hbox_new (FALSE, 0));
+  GtkWidget *btn = ol_image_button_new ();
+  GdkPixbuf *pixbuf = gdk_pixbuf_new_from_file ("/usr/local/share/icons/hicolor/scalable/actions/osd-lyrics-osd-play.svg", NULL);
+  ol_image_button_set_pixbuf (btn, pixbuf);
+  gtk_box_pack_end (toolbar, btn, FALSE, TRUE, 0);
+  gtk_widget_show_all (GTK_WIDGET (toolbar));
+  return GTK_WIDGET (toolbar);
+}
 
-  printf ("shown\n");
+int
+main (int argc, char **argv)
+{
+  gtk_init (&argc, &argv);
+/*   gtk_widget_show_all (window); */
+  GtkWidget *ol_osd = init_osd ();
+  gtk_container_add (GTK_CONTAINER (ol_osd), init_toolbar ());
   gtk_main ();
   return 0;
 }
